# IT45-Project

./: CMakeLists.txt  Makefile  README.md  README.txt  build.sh  clean.sh  data.cpp  data.h  data.hpp  dataAnalysis.cpp  dataAnalysis.h  dataAnalysis.hpp  dataCollection.cpp  dataCollection.hpp  distanceMatrix.cpp  distanceMatrix.h  genetic.cpp  genetic.hpp  inclusion.hpp  kMeans.cpp  kMeans.hpp  kMedoids.cpp  kMedoids.hpp  main.cpp  readCSVFile.cpp  readCSVFile.hpp  run.sh  solution.cpp  solution.hpp
accessCSV/: centersCSV.cpp  centersCSV.hpp  distanceCSV.cpp  distanceCSV.h  distanceCSV.hpp  employeesCSV.cpp  employeesCSV.hpp  missionsCSV.cpp  missionsCSV.hpp
classes/: center.cpp  center.h  center.hpp  distances.cpp  distances.h  distances.hpp  employee.cpp  employee.h  employee.hpp  mission.cpp  mission.h  mission.hpp
instances/100Missions-2centres/: Employees.csv
instances/200Missions-2centres/: Employees.csv  Missions.csv
instances/30Missions-2centres/: Employees.csv  Missions.csv
instances/66Missions-2centres/: Employees.csv  Missions.csv
instances/94Missions-2centres/: Centers.csv  Employees.csv
instances/94Missions-3centres/: Centers.csv  Employees.csv  Missions.csv  centers.csv
